[gd_scene load_steps=9 format=3 uid="uid://bf5ohqo8j3cxu"]

[ext_resource type="Script" path="res://main.gd" id="1_fwn0h"]
[ext_resource type="VideoStream" path="res://1280X72030FpsPhotoJpeg75.ogv" id="3_ea6nr"]
[ext_resource type="FontFile" uid="uid://6433u81xcahc" path="res://Fonts/Heavitas.ttf" id="4_kveu5"]
[ext_resource type="Script" path="res://VideoStreamPlayer.gd" id="4_pl8ou"]
[ext_resource type="Script" path="res://PlayButton.gd" id="5_0xwfd"]
[ext_resource type="Shader" path="res://RGBVisShaderr.gdshader" id="5_5jbll"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_luw61"]
shader = ExtResource("5_5jbll")
shader_parameter/PixelColorV3 = Vector3(0, 0, 0)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_vsvw4"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_fwn0h")

[node name="VideoPlayerPanel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 11.0
offset_right = 581.0
offset_bottom = 603.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VideoPlayerPanel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VideoPlayerPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VideoPlayerPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_kveu5")
theme_override_font_sizes/font_size = 12
text = "Video Player Panel"

[node name="VideoPlayer" type="VideoStreamPlayer" parent="VideoPlayerPanel/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 3
stream = ExtResource("3_ea6nr")
autoplay = true
loop = true
script = ExtResource("4_pl8ou")

[node name="HSeparator" type="HSeparator" parent="VideoPlayerPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HFlowContainer" type="HFlowContainer" parent="VideoPlayerPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="VideoPlayerPanel/VBoxContainer/HFlowContainer"]
layout_mode = 2
text = ">
"
icon_alignment = 1
script = ExtResource("5_0xwfd")

[node name="HSeparator2" type="HSeparator" parent="VideoPlayerPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VideoPlayerPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VideoPlayerPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_kveu5")
theme_override_font_sizes/font_size = 10
text = "Video Data"

[node name="Label_VideoSec" type="Label" parent="VideoPlayerPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_kveu5")
text = "Empty
"

[node name="Label_VideoSec2" type="Label" parent="VideoPlayerPanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_kveu5")
text = "Status: 
"

[node name="VLC_Api" type="VLC_Api" parent="."]
speed = 3018.99

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 909.0
offset_top = 14.0
offset_right = 1130.0
offset_bottom = 262.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Frame's Pixel's Visualization:"

[node name="Visualization" type="TextureRect" parent="PanelContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_luw61")
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AnimatedTexture_vsvw4")
expand_mode = 5

[node name="ComponentDataContainer" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 638.0
offset_top = 353.0
offset_right = 872.0
offset_bottom = 601.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ComponentDataContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ComponentDataContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Component data:"

[node name="HSeparator" type="HSeparator" parent="ComponentDataContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label3" type="Label" parent="ComponentDataContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "RGB data:"

[node name="Label2" type="Label" parent="ComponentDataContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Status:"

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(581, 214, 610, 214, 610, 458, 638, 458)

[connection signal="gui_input" from="VideoPlayerPanel/VBoxContainer/VideoPlayer" to="." method="_on_video_player_gui_input"]
